--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WTF: Webpack starter kit</title>
-    <meta name="description" content="Your project description" />
+    <title>WaterApp</title>
+    <meta
+      name="Water Apliction"
+      content="How many glasses of water should i drink"
+    />
     <!-- Title -->
     <meta property="og:title" content="" />
     <!-- OPTIONAL description. 2-4 sentences. -->
@@ -144,10 +147,36 @@
       media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
   </head>
-  <body>
-    <div class="hello">
-      <img class="hello__logo" src="../assets/img/logo.svg" alt="WTF " />
-      <span class="hello__circles"></span>
+  <main class="grid">
+    <header class="header">
+      <h1 class="header__text">WatterApp</h1>
+    </header>
+    <section class="list__name">
+      <ul class="list__element">
+        <li class="list__element">Running</li>
+        <li class="list__element">Walking</li>
+        <li class="list__element">Cyclking</li>
+        <li class="list__element">Swiming</li>
+        <li class="list__element">Codeing</li>
+      </ul>
+    </section>
+    <section class="list__agree">
+      <ul>
+        <li class="list__element">Running</li>
+        <li class="list__element">Walking</li>
+        <li class="list__element">Cyclking</li>
+        <li class="list__element">Swiming</li>
+        <li class="list__element">Codeing</li>
+      </ul>
+    </section>
+    <div class="statistics">
+      <bottom></bottom>
+      <img />
+      <p>%</p>
+      <button></button>
     </div>
-  </body>
+  </main>
+  <div class="footer">
+    <footer>Create by Wojciech Sadomski</footer>
+  </div>
 </html>
