createing HTML and CSS

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -151,32 +151,34 @@
     <header class="header">
       <h1 class="header__text">WatterApp</h1>
     </header>
-    <section class="list__name">
-      <ul class="list__element">
-        <li class="list__element">Running</li>
-        <li class="list__element">Walking</li>
-        <li class="list__element">Cyclking</li>
-        <li class="list__element">Swiming</li>
-        <li class="list__element">Codeing</li>
-      </ul>
+    <section class="list">
+        <h2 class="list__header">Activity</h2>
+        <p class="list__element">
+          <label>Running<input class="list__active"name="Running" type="checkbox" /></label>
+        </p>
+        <p class="list__element">
+          <label>Running<input class="list__active"name="Running" type="checkbox" /></label>
+        </p>
+        <p class="list__element">
+          <label>Running<input class="list__active"name="Running" type="checkbox" /></label>
+        </p>
+        <p class="list__element">
+          <label>Running<input class="list__active"name="Running" type="checkbox" /></label>
+        </p>
+        <p class="list__element">
+          <label>Running<input class="list__active"name="Running" type="checkbox" /></label>
+        </p>
+      </fieldset>
     </section>
-    <section class="list__agree">
-      <ul>
-        <li class="list__element">Running</li>
-        <li class="list__element">Walking</li>
-        <li class="list__element">Cyclking</li>
-        <li class="list__element">Swiming</li>
-        <li class="list__element">Codeing</li>
-      </ul>
+    <section class="statistic">
+      <h2 class="list__header">You need today</h2>
+      <img class="statistic__image" src="../assets/img/drop.svg" />
+      <p class="statistic__text">22%</p>
     </section>
-    <div class="statistics">
-      <bottom></bottom>
-      <img />
-      <p>%</p>
-      <button></button>
+    <div class="buttons">
+      <bottom>Dodaj</bottom>
+      <button>Usun</button>
     </div>
   </main>
-  <div class="footer">
-    <footer>Create by Wojciech Sadomski</footer>
-  </div>
+    <footer class="footer">Created by Wojciech Sadomski</footer>
 </html>
