first style ready

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -157,28 +157,31 @@
           <label>Running<input class="list__active"name="Running" type="checkbox" /></label>
         </p>
         <p class="list__element">
-          <label>Running<input class="list__active"name="Running" type="checkbox" /></label>
+          <label>Walking<input class="list__active"name="Running" type="checkbox" /></label>
         </p>
         <p class="list__element">
-          <label>Running<input class="list__active"name="Running" type="checkbox" /></label>
+          <label>Cycling<input class="list__active"name="Running" type="checkbox" /></label>
         </p>
         <p class="list__element">
-          <label>Running<input class="list__active"name="Running" type="checkbox" /></label>
+          <label>Swimming<input class="list__active"name="Running" type="checkbox" /></label>
         </p>
         <p class="list__element">
-          <label>Running<input class="list__active"name="Running" type="checkbox" /></label>
+          <label>Codeing<input class="list__active"name="Running" type="checkbox" /></label>
         </p>
       </fieldset>
     </section>
     <section class="statistic">
+      
       <h2 class="list__header">You need today</h2>
-      <img class="statistic__image" src="../assets/img/drop.svg" />
+      
       <p class="statistic__text">22%</p>
     </section>
-    <div class="buttons">
-      <bottom>Dodaj</bottom>
-      <button>Usun</button>
-    </div>
+    <section class="btnRemove">
+      <button class="btnRemove--style btnRemove--style--js"></button>
+    </section>
+    <section class=btnAdd>
+      <button class="btnAdd--style btnAdd--style--js"></button>
+    </section>
   </main>
     <footer class="footer">Created by Wojciech Sadomski</footer>
 </html>
