working app, error in

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -154,19 +154,19 @@
     <section class="list">
         <h2 class="list__header">Activity</h2>
         <p class="list__element">
-          <label>Running<input class="list__active"name="Running" type="checkbox" /></label>
+          <label>Running<input class="list__active list__active--running--js"name="Running" type="checkbox" /></label>
         </p>
         <p class="list__element">
-          <label>Walking<input class="list__active"name="Running" type="checkbox" /></label>
+          <label>Walking<input class="list__active list__active--walking--js"name="Running" type="checkbox" /></label>
         </p>
         <p class="list__element">
-          <label>Cycling<input class="list__active"name="Running" type="checkbox" /></label>
+          <label>Cycling<input class="list__active list__active--cycling--js"name="Running" type="checkbox" /></label>
         </p>
         <p class="list__element">
-          <label>Swimming<input class="list__active"name="Running" type="checkbox" /></label>
+          <label>Swimming<input class="list__active list__active---swimming-js"name="Running" type="checkbox" /></label>
         </p>
         <p class="list__element">
-          <label>Codeing<input class="list__active"name="Running" type="checkbox" /></label>
+          <label>Codeing<input class="list__active list__active--codeing--js"name="Running" type="checkbox" /></label>
         </p>
       </fieldset>
     </section>
@@ -174,7 +174,7 @@
       
       <h2 class="list__header">You need today</h2>
       
-      <p class="statistic__text">22%</p>
+      <p class="statistic__text statistic__text--js"></p>
     </section>
     <section class="btnRemove">
       <button class="btnRemove--style btnRemove--style--js"></button>
