before use webpack

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,7 +21,7 @@
     />
 
     <!-- uncomment the line below to enable PWA  -->
-    <!-- <link rel="manifest" href="manifest.json" /> -->
+    <link rel="manifest" href="manifest.json" />
 
     <link
       rel="apple-touch-icon"
@@ -172,7 +172,7 @@
     </section>
     <section class="statistic">
       
-      <h2 class="list__header">You need today</h2>
+      <h2 class="list__header">You drank:</h2>
       
       <p class="statistic__text statistic__text--js"></p>
     </section>
@@ -180,7 +180,7 @@
       <button class="btnRemove--style btnRemove--style--js"></button>
     </section>
     <section class=btnAdd>
-      <button class="btnAdd--style btnAdd--style--js"></button>
+      <button class="btnAdd--style btnAdd--style--js"><div class="btnAdd--style--text">200ml</div></button>
     </section>
   </main>
     <footer class="footer">Created by Wojciech Sadomski</footer>
