--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,20 +9,19 @@
       content="How many glasses of water should i drink"
     />
     <!-- Title -->
-    <meta property="og:title" content="" />
+    <meta property="og:title" content="Water Apliction" />
     <!-- OPTIONAL description. 2-4 sentences. -->
-    <meta property="og:description" content="" />
+    <meta
+      property="og:description"
+      content="Aplication, which help you, how many water, should you drink every day "
+    />
     <!-- full url with http(s) ie. https://maciejkorsan.github.io/my-repo/ -->
     <meta property="og:url" content="" />
     <!-- full url to the image with http(s) ie. https://maciejkorsan.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
-    <meta
-      property="og:image"
-      content="https://maciejkorsan.com/wtf-gulp-starter/assets/img/cover.png"
-    />
+    <meta property="og:image" content="" />
 
     <!-- uncomment the line below to enable PWA  -->
     <link rel="manifest" href="manifest.json" />
-
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -147,41 +146,68 @@
       media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
   </head>
-  <main class="grid">
-    <header class="header">
-      <h1 class="header__text">WatterApp</h1>
-    </header>
-    <section class="list">
+  <body>
+    <main class="grid">
+      <header class="header">
+        <h1 class="header__text">WatterApp</h1>
+      </header>
+      <section class="list">
         <h2 class="list__header">Activity</h2>
         <p class="list__element">
-          <label>Running<input class="list__active list__active--running--js"name="Running" type="checkbox" /></label>
+          <label
+            >Running<input
+              class="list__active list__active--running--js"
+              name="Running"
+              type="checkbox"
+          /></label>
         </p>
         <p class="list__element">
-          <label>Walking<input class="list__active list__active--walking--js"name="Running" type="checkbox" /></label>
+          <label
+            >Walking<input
+              class="list__active list__active--walking--js"
+              name="Running"
+              type="checkbox"
+          /></label>
         </p>
         <p class="list__element">
-          <label>Cycling<input class="list__active list__active--cycling--js"name="Running" type="checkbox" /></label>
+          <label
+            >Cycling<input
+              class="list__active list__active--cycling--js"
+              name="Running"
+              type="checkbox"
+          /></label>
         </p>
         <p class="list__element">
-          <label>Swimming<input class="list__active list__active---swimming-js"name="Running" type="checkbox" /></label>
+          <label
+            >Swimming<input
+              class="list__active list__active---swimming-js"
+              name="Running"
+              type="checkbox"
+          /></label>
         </p>
         <p class="list__element">
-          <label>Codeing<input class="list__active list__active--codeing--js"name="Running" type="checkbox" /></label>
+          <label
+            >Codeing<input
+              class="list__active list__active--codeing--js"
+              name="Running"
+              type="checkbox"
+          /></label>
         </p>
-      </fieldset>
-    </section>
-    <section class="statistic">
-      
-      <h2 class="list__header">You drank:</h2>
-      
-      <p class="statistic__text statistic__text--js"></p>
-    </section>
-    <section class="btnRemove">
-      <button class="btnRemove--style btnRemove--style--js"></button>
-    </section>
-    <section class=btnAdd>
-      <button class="btnAdd--style btnAdd--style--js"><div class="btnAdd--style--text">200ml</div></button>
-    </section>
-  </main>
+      </section>
+      <section class="statistic">
+        <h2 class="list__header">You drank:</h2>
+
+        <p class="statistic__text statistic__text--js"></p>
+      </section>
+      <section class="btnRemove">
+        <button class="btnRemove--style btnRemove--style--js"></button>
+      </section>
+      <section class="btnAdd">
+        <button class="btnAdd--style btnAdd--style--js">
+          <div class="btnAdd--style--text">200ml</div>
+        </button>
+      </section>
+    </main>
     <footer class="footer">Created by Wojciech Sadomski</footer>
+  </body>
 </html>
