--- a/src/pages/another.html
+++ b/src/pages/another.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WTF Webpack starterkit</title>
-</head>
-<body>
-    <div class="hello"></div>
-    <h1>hello world</h1>
-</body>
+  </head>
+  <body>
+    <a class="back" href="index.html">🔙</a>
+    <h1 class="another__header">What have you done? 😱</h1>
+  </body>
 </html>
