--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,9 +16,15 @@
       content="Aplication, which help you, how many water, should you drink every day "
     />
     <!-- full url with http(s) ie. https://maciejkorsan.github.io/my-repo/ -->
-    <meta property="og:url" content="" />
+    <meta
+      property="og:url"
+      content="https://wojciech-sadomski.github.io/waterApp/"
+    />
     <!-- full url to the image with http(s) ie. https://maciejkorsan.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
-    <meta property="og:image" content="" />
+    <meta
+      property="og:image"
+      content="https://wojciech-sadomski.github.io/waterApp/"
+    />
 
     <!-- uncomment the line below to enable PWA  -->
     <link rel="manifest" href="manifest.json" />
@@ -153,49 +159,53 @@
       </header>
       <section class="list">
         <h2 class="list__header">Activity</h2>
-        <p class="list__element">
-          <label
-            >Running<input
-              class="list__active list__active--running--js"
-              name="Running"
-              type="checkbox"
-          /></label>
-        </p>
-        <p class="list__element">
-          <label
-            >Walking<input
-              class="list__active list__active--walking--js"
-              name="Running"
-              type="checkbox"
-          /></label>
-        </p>
-        <p class="list__element">
-          <label
-            >Cycling<input
-              class="list__active list__active--cycling--js"
-              name="Running"
-              type="checkbox"
-          /></label>
-        </p>
-        <p class="list__element">
-          <label
-            >Swimming<input
-              class="list__active list__active---swimming-js"
-              name="Running"
-              type="checkbox"
-          /></label>
-        </p>
-        <p class="list__element">
-          <label
-            >Codeing<input
-              class="list__active list__active--codeing--js"
-              name="Running"
-              type="checkbox"
-          /></label>
-        </p>
+        <form>
+          <p class="list__element">
+            <label
+              >Running<input
+                class="list__active list__active--running--js"
+                name="Running"
+                type="checkbox"
+                value="true"
+            /></label>
+          </p>
+          <p class="list__element">
+            <label
+              >Walking<input
+                class="list__active list__active--walking--js"
+                name="Walking"
+                type="checkbox"
+            /></label>
+          </p>
+          <p class="list__element">
+            <label
+              >Cycling<input
+                class="list__active list__active--cycling--js"
+                name="Cycling"
+                type="checkbox"
+            /></label>
+          </p>
+          <p class="list__element">
+            <label
+              >Swimming<input
+                class="list__active list__active---swimming-js"
+                name="Swimming"
+                type="checkbox"
+            /></label>
+          </p>
+          <a class="link__hide" href="another.html">
+            <p class="list__element">
+              <label
+                >Codeing<input
+                  class="list__active list__active--codeing--js"
+                  name="Codeing"
+                  type="checkbox"
+              /></label></p
+          ></a>
+        </form>
       </section>
       <section class="statistic">
-        <h2 class="list__header">You drank:</h2>
+        <h2 class="list__header">You've drank:</h2>
 
         <p class="statistic__text statistic__text--js"></p>
       </section>
