first version of aplication

--- a/src/pages/another.html
+++ b/src/pages/another.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WTF Webpack starterkit</title>
+    <title>Nuklear reaction</title>
   </head>
-  <body>
-    <a class="back" href="index.html">🔙</a>
-    <h1 class="another__header">What have you done? 😱</h1>
+  <body class="nuke">
+    <a class="nuke__back" href="index.html">🔙</a>
+    <h1 class="nuke__header">What have you done? 😱</h1>
+    <div class="nuke__animation">
+      <img
+        class="nuke__img"
+        src="../../public/img/nuke.svg"
+        alt="nuke detonation"
+      />
+    </div>
   </body>
 </html>
